--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "cmdk": "^1.0.4",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.468.0",
-    "next": "14.2.23",
+    "next": "^14.2.23",
     "next-themes": "^0.2.1",
     "prettier": "^3.3.3",
     "radix-ui": "^1.1.3",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-day-picker": "^9.5.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "resend": "^4.1.2",
     "stripe": "^17.6.0",
